[package]
name        = "pgwebapp"
version     = "1.0.0"
edition     = "2021"
description = "PostgreSQL Web Query Studio — Rust backend"

[[bin]]
name = "pgwebapp"
path = "src/main.rs"

[dependencies]
# PostgreSQL client
postgres            = "0.19"
native-tls          = "0.2"
postgres-native-tls = "0.5"

# HTTP server
tiny_http  = "0.12"

# JSON
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# URL decoding
urlencoding = "2"

# Logging
env_logger = "0.11"
log        = "0.4"

[profile.release]
opt-level = 3
lto       = true
strip     = true
